Cleanup (#34)
* Update buildscript and GT5U dependency

* Cleanup

* Apply spotless